# MathEngine

./: readme.md
docu/: architecture.md  drawings.drawio
source/: CMakeLists.txt
source/include/: test.h  tokenizer.h
source/src/: CMakeLists.txt  main.cpp  test.cpp  tokenizer.cpp
